--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
       <div class="container my-3">
           <img src="/images/logo.svg" alt="">
 
@@ -28,16 +28,16 @@
           </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
               <ul class="navbar-nav">
-                <li class="nav-item me-3">
+                <li class="nav-item me-4">
                   <a class="nav-link" href="#">About</a>
                 </li>
-                <li class="nav-item me-3">
+                <li class="nav-item me-4">
                   <a class="nav-link" href="#">Services</a>
                 </li>
-                <li class="nav-item me-3">
+                <li class="nav-item me-4">
                   <a class="nav-link" href="#">Projects</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item me-4">
                   <button type="button" class="btn bg-white rounded-pill py-2 px-4">CONTACT</button>
                 </li>
               </ul>
