--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="container-fluid">
       <div class="row row-class">
-        <div class="col-12 col-sm-6 col-div p-0 order-sm-1"><img class = "img-fluid" width = "100%" src="/images/desktop/image-transform.jpg" alt=""></div>
+        <div class="col-12 col-sm-6 col-div p-0 order-sm-1"><img class = "img-fluid" width = "100%" src="./images/desktop/image-transform.jpg" alt=""></div>
           <div class="col-12 col-sm-6 col-div order-sm-0">
             <div class="text1">
               <h2>Transform your brand</h2>
@@ -64,7 +64,7 @@
             </div>
           </div>
           
-          <div class="col-12 col-sm-6 col-div p-0 order-sm-2"><img class = "img-fluid" width = "100%" src="/images/desktop/image-stand-out.jpg" alt=""></div>
+          <div class="col-12 col-sm-6 col-div p-0 order-sm-2"><img class = "img-fluid" width = "100%" src="./images/desktop/image-stand-out.jpg" alt=""></div>
           <div class="col-12 col-sm-6 col-div p-0 order-sm-3">
             <div class="text1">
               <div class="col-text1">
@@ -75,14 +75,14 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-div p-0 order-sm-4">
-            <img class = "img-fluid" src="/images/desktop/image-graphic-design.jpg" alt="">
+            <img class = "img-fluid" src="./images/desktop/image-graphic-design.jpg" alt="">
             <div class="col-text2 mx-auto">
               <h3 class="text-center">Graphic design</h3>
               <p class="text-center">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
             </div>
           </div>
           <div class="col-12 col-sm-6 col-div p-0 order-sm-5">
-            <img class = "img-fluid" src="/images/desktop/image-photography.jpg" alt="">
+            <img class = "img-fluid" src="./images/desktop/image-photography.jpg" alt="">
             <div class="col-text2 mx-auto">
               <h3 class="text-center">Photography</h3>
               <p class="text-center">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
@@ -95,19 +95,19 @@
       <h4 class="mx-auto text-center mb-5">CLIENT TESTIMONIALS</h4>
       <div class="row">
         <div class="col-12 col-md-4 mx-auto text-center mb-5 reviews">
-          <img src="/images/image-emily.jpg" alt="">
+          <img src="./images/image-emily.jpg" alt="">
           <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
           <h5>Emily R.</h5>
           <span>Marketing Director</span>
         </div>
         <div class="col-12 col-md-4 mx-auto text-center mb-5 reviews">
-          <img src="/images/image-thomas.jpg" alt="">
+          <img src="./images/image-thomas.jpg" alt="">
           <p>Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience.</p>
           <h5>Thomas S.</h5>
           <span>Chief Operating Officer</span>
         </div>
         <div class="col-12 col-md-4 mx-auto text-center mb-5 reviews">
-          <img src="/images/image-jennie.jpg" alt="">
+          <img src="./images/image-jennie.jpg" alt="">
           <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
           <h5>Jennie F.</h5>
           <span>Business Owner</span>
@@ -118,16 +118,16 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-6 col-sm-3 p-0 m-0">
-          <img class = "img-fluid"  src="/images/desktop/image-gallery-milkbottles.jpg" alt="">
+          <img class = "img-fluid"  src="./images/desktop/image-gallery-milkbottles.jpg" alt="">
         </div>
         <div class="col-6 col-sm-3 p-0 m-0">
-          <img class = "img-fluid"  src="/images/desktop/image-gallery-orange.jpg" alt="">
+          <img class = "img-fluid"  src="./images/desktop/image-gallery-orange.jpg" alt="">
         </div>
         <div class="col-6 col-sm-3  p-0 m-0">
-          <img class = "img-fluid"  src="/images/desktop/image-gallery-cone.jpg" alt="">
+          <img class = "img-fluid"  src="./images/desktop/image-gallery-cone.jpg" alt="">
         </div>
         <div class="col-6 col-sm-3 p-0 m-0">
-          <img class = "img-fluid" src="/images/desktop/image-gallery-sugarcubes.jpg" alt="">
+          <img class = "img-fluid" src="./images/desktop/image-gallery-sugarcubes.jpg" alt="">
         </div>
       </div>
     </div>
@@ -151,22 +151,22 @@
         <div class="row mx-auto justify-content-center mb-5 f2">
           <div class="col-3 text-center">
             <a href="">
-              <img src="/images/icon-facebook.svg" alt="">
+              <img src="./images/icon-facebook.svg" alt="">
             </a>
           </div>
           <div class="col-3 text-center">
             <a href="">
-              <img src="/images/icon-instagram.svg" alt="">
+              <img src="./images/icon-instagram.svg" alt="">
             </a>
           </div>
           <div class="col-3 text-center">
             <a href="">
-              <img src="/images/icon-twitter.svg" alt="">
+              <img src="./images/icon-twitter.svg" alt="">
             </a>
           </div>
           <div class="col-3 text-center">
             <a href="">
-              <img src="/images/icon-pinterest.svg" alt="">
+              <img src="./images/icon-pinterest.svg" alt="">
             </a>
           </div>
         </div>
